RESOLVED FIXED241645
[Trackpad with iPad] Right-clicking on text sometimes doesn't show the correct list of actions
https://bugs.webkit.org/show_bug.cgi?id=241645
Summary [Trackpad with iPad] Right-clicking on text sometimes doesn't show the correc...
Kate Cheney
Reported 2022-06-15 13:23:21 PDT
[Trackpad with iPad] Right-clicking on text sometimes doesn't show the correct list of actions
Attachments
Kate Cheney
Comment 1 2022-06-15 14:27:12 PDT
EWS
Comment 2 2022-06-16 21:53:55 PDT
Committed r295626 (251631@main): <https://commits.webkit.org/251631@main> Reviewed commits have been landed. Closing PR #1547 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-16 21:54:25 PDT
Note You need to log in before you can comment on or make changes to this bug.